@@ -17,17 +17,25 @@
 
 package org.apache.solr.handler.admin;
 
-import junit.framework.TestCase;
-
-import org.apache.solr.common.util.SimpleOrderedMap;
+import org.apache.solr.util.AbstractSolrTestCase;
 
 /**
  * :TODO: currently only tests some of the utilities in the LukeRequestHandler
  */
-public class LukeRequestHandlerTest extends TestCase {
-  
+public class LukeRequestHandlerTest extends AbstractSolrTestCase {
+
+  @Override
+  public String getSchemaFile() {
+    return "schema12.xml";
+  }
+
+  @Override
+  public String getSolrConfigFile() {
+    return "solrconfig.xml";
+  }
+
   /** tests some simple edge cases */
-  public void testHistogramPowerOfTwoBucket() {
+  public void doTestHistogramPowerOfTwoBucket() {
     assertHistoBucket(1,  1);
     assertHistoBucket(2,  2);
     assertHistoBucket(4,  3);
@@ -45,8 +53,47 @@ public class LukeRequestHandlerTest extends TestCase {
     assertHistoBucket(MAX_VALID*2, MAX_VALID+1 );
     
   }
+
   private void assertHistoBucket(int expected, int in) {
     assertEquals("histobucket: " + in, expected,
                  LukeRequestHandler.TermHistogram.getPowerOfTwoBucket( in ));
   }
+
+  public void testLuke() {
+    doTestHistogramPowerOfTwoBucket();
+
+    assertU(adoc("id","SOLR1000", "name","Apache Solr",
+      "solr_si", "10",
+      "solr_sl", "10",
+      "solr_sf", "10",
+      "solr_sd", "10",
+      "solr_s", "10",
+      "solr_sI", "10",
+      "solr_sS", "10",
+      "solr_t", "10",
+      "solr_tt", "10",
+      "solr_b", "true",
+      "solr_i", "10",
+      "solr_l", "10",
+      "solr_f", "10",
+      "solr_d", "10",
+      "solr_ti", "10",
+      "solr_tl", "10",
+      "solr_tf", "10",
+      "solr_td", "10",
+      "solr_pi", "10",
+      "solr_pl", "10",
+      "solr_pf", "10",
+      "solr_pd", "10",
+      "solr_dt", "2000-01-01T01:01:01Z",
+      "solr_tdt", "2000-01-01T01:01:01Z",
+      "solr_pdt", "2000-01-01T01:01:01Z"
+    ));
+    assertU(commit());
+
+    // test that Luke can handle all of the field types
+    assertQ(req("qt","/admin/luke", "id","SOLR1000"));
+  }
+
+
 }
