@@ -95,6 +95,9 @@ Bug Fixes
   it would just fail in unexpected ways.  This has been changed so that it
   will fail with a clear error message on initialization. (hossman)
 
+* SOLR-1563: Binary fields, including trie-based numeric fields, caused null
+  pointer exceptions in the luke request handler. (yonik)
+
 ================== Release 1.4.0 ==================
 Release Date:  See http://lucene.apache.org/solr for the official release date.
 
